--- a/requirements.txt
+++ b/requirements.txt
@@ -2,19 +2,27 @@ argh==0.26.2
 beautifulsoup4==4.6.3
 cairocffi==0.9.0
 CairoSVG==2.1.3
+certifi==2018.11.29
 cffi==1.11.5
+chardet==3.0.4
 cssselect2==0.2.1
 defusedxml==0.5.0
 html5lib==1.0.1
+idna==2.8
 pathtools==0.1.2
 pdfrw==0.4
 Pillow==5.2.0
 ply==3.11
 pycparser==2.18
 Pyphen==0.9.5
+python-slugify==1.2.6
 PyYAML==3.13
+requests==2.21.0
 six==1.11.0
 tinycss2==0.6.1
+transifex-client==0.13.6
+Unidecode==1.0.23
+urllib3==1.23
 watchdog==0.9.0
 WeasyPrint==0.42.3
 webencodings==0.5.1
