--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 beautifulsoup4==4.6.3
-CairoSVG==2.1.3
 certifi==2018.11.29
-cffi==1.11.5
 chardet==3.0.4
 cssselect2==0.2.1
 defusedxml==0.5.0
@@ -20,5 +18,6 @@ tinycss2==1.0.0
 transifex-client==0.13.6
 Unidecode==1.0.23
 urllib3==1.23
+watchdog==0.9.0
 WeasyPrint==47
 webencodings==0.5.1
