--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,15 @@ cssselect2==0.2.1
 defusedxml==0.5.0
 html5lib==1.0.1
 idna==2.8
+Markdown==3.1.1
+markdown-captions==2
+mkdocs==1.0.4
+mkdocs-cinder==0.17.0
+mkdocs-ivory==0.4.0
+mkdocs-material==4.5.0
+mkdocs-minify-plugin==0.2.1
+mkdocs-rtd-dropdown==1.0.2
+mkdocs-windmill==1.0.3
 pdfrw==0.4
 Pillow==5.2.0
 ply==3.11
