refactor: share output folder with other docs

--- a/src/commonmark/en/resources/mkdocs/mkdocs.yml
+++ b/src/commonmark/en/resources/mkdocs/mkdocs.yml
@@ -65,7 +65,7 @@ markdown_extensions:
     - pymdownx.tilde
 
 # output when building
-site_dir: ../../target/mkdocs/<language>/
+site_dir: ../../target/commonmark/<language>/
 
 
 nav:
