fix(mkdocs): French with accent

--- a/src/commonmark/en/resources/mkdocs/mkdocs.yml
+++ b/src/commonmark/en/resources/mkdocs/mkdocs.yml
@@ -22,7 +22,7 @@ extra:
     dhis2_language: '<language>'
     dhis2_languages:
         en: 'English'
-        fr: 'Francais'
+        fr: 'Français'
 
 theme:
     name: material
