--- a/src/commonmark/en/resources/mkdocs/mkdocs.yml
+++ b/src/commonmark/en/resources/mkdocs/mkdocs.yml
@@ -27,6 +27,8 @@ extra:
     dhis2_languages:
         en: 'English'
         fr: 'Français'
+        es_419: 'Español (latinoamerica)'
+        pt: 'Português'
 
 theme:
     name: material
@@ -38,7 +40,7 @@ theme:
     palette:
       primary: 'white'
       accent: 'blue'
-    language: '<language>'
+    language: '<language-no-region>'
 
 # our css
 extra_css:
