Revert "build: WIP: upgrading to material for mkdocs 5 (#446)"
This reverts commit ceead49d7a40f37c37ea619f14b48892d0ea64a8.

--- a/src/commonmark/en/resources/mkdocs/mkdocs.yml
+++ b/src/commonmark/en/resources/mkdocs/mkdocs.yml
@@ -34,8 +34,8 @@ theme:
     name: material
     logo: 'resources/images/logo.svg'
     favicon: 'resources/images/favicon.ico'
-    features:
-      - tabs
+    feature:
+      tabs: true
     custom_dir: 'theme'
     palette:
       primary: 'white'
