--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,10 @@ pdfrw==0.4
 Pillow==7.1.1
 ply==3.11
 pycparser==2.18
+pymdown-extensions==8.0
 Pyphen==0.9.5
 python-slugify==1.2.6
-PyYAML==4.2b1
+PyYAML==5.3.1
 requests==2.21.0
 six==1.11.0
 tinycss2==1.0.0
