--- a/src/sysadmin/sysadmin.yml
+++ b/src/sysadmin/sysadmin.yml
@@ -1,5 +1,5 @@
-- Installation: 'sysadmin/installation.md'
-- Upgrading: 'sysadmin/upgrading.md'
-- Monitoring: 'sysadmin/monitoring.md'
-- Audit: 'sysadmin/audit.md'
-- Using Gateways for SMS reporting: 'sysadmin/SMS-reporting.md'
+- Installation: 'installation.md'
+- Upgrading: 'upgrading.md'
+- Monitoring: 'monitoring.md'
+- Audit: 'audit.md'
+- Using Gateways for SMS reporting: 'SMS-reporting.md'
