--- a/src/sysadmin/sysadmin_section_index.yml
+++ b/src/sysadmin/sysadmin_section_index.yml
@@ -2,42 +2,42 @@
 Manage: '@github(dhis2/dhis2-docs, src/sysadmin/index.md, new_install_docs)'
 Getting Started:
   # alt__DHIS core version new_install_docs:
-  - Quickstart: '@github(dhis2/dhis2-docs, src/sysadmin/getting_started/quick-start.md, new_install_docs)'
-  - Automated Install on Linux Server: '@github(dhis2/dhis2-docs, src/sysadmin/getting_started/dhis2-tools.md, new_install_docs)'
-  - Manual install on Linux Server: '@github(dhis2/dhis2-docs, src/sysadmin/getting_started/linux-manual-install.md, new_install_docs)'
-  - Manual Install on Windows Server: '@github(dhis2/dhis2-docs, src/sysadmin/getting_started/windows-manual-install.md, new_install_docs)'
+  - Quickstart: '@github(dhis2/dhis2-docs, src/sysadmin/getting-started/quick-start.md, new_install_docs)'
+  - Manual install on Linux Server: '@github(dhis2/dhis2-docs, src/sysadmin/getting-started/linux-manual-install.md, new_install_docs)'
+  - Manual Install on Windows Server: '@github(dhis2/dhis2-docs, src/sysadmin/getting-started/windows-manual-install.md, new_install_docs)'
+  # - Automated Install on Linux Server: '@github(dhis2/dhis2-docs, src/sysadmin/getting-started/dhis2-tools.md, new_install_docs)'
 Hosting:
   - Requirements: '@github(dhis2/dhis2-docs, src/sysadmin/hosting/requirements.md, new_install_docs)'
-  - Physical Hosting: '@github(dhis2/dhis2-docs, src/sysadmin/hosting/physical_hosting.md, new_install_docs)'
-  - Cloud Hosting: '@github(dhis2/dhis2-docs, src/sysadmin/hosting/cloud_hosting.md, new_install_docs)'
-How-To Guides:
-  - PostgreSQL Setup: '@github(dhis2/dhis2-docs, src/sysadmin/how_to/PostgreSQL-setup.md, new_install_docs)'
-  - Backup: '@github(dhis2/dhis2-docs, src/sysadmin/how_to/backup.md, new_install_docs)'
-  - azure-sso: '@github(dhis2/dhis2-docs, src/sysadmin/how_to/azure-sso.md, new_install_docs)'
-  - Encryption: '@github(dhis2/dhis2-docs, src/sysadmin/how_to/encryption.md, new_install_docs)'
-  - Reverse Proxy: '@github(dhis2/dhis2-docs, src/sysadmin/how_to/reverse-proxy.md, new_install_docs)'
-  - Securing DHIS2: '@github(dhis2/dhis2-docs, src/sysadmin/how_to/secure-dhis2.md, new_install_docs)'
-  - Upgrade Major: '@github(dhis2/dhis2-docs, src/sysadmin/how_to/upgrade-major.md, new_install_docs)'
-  - DHIS2 High Availability: '@github(dhis2/dhis2-docs, src/sysadmin/how_to/tomcat-clustering.md, new_install_docs)'
-  - Installing Redis: '@github(dhis2/dhis2-docs, src/sysadmin/how_to/installing-redis.md, new_install_docs)'
+  - Physical Hosting: '@github(dhis2/dhis2-docs, src/sysadmin/hosting/physical-hosting.md, new_install_docs)'
+  - Cloud Hosting: '@github(dhis2/dhis2-docs, src/sysadmin/hosting/cloud-hosting.md, new_install_docs)'
+How To:
+  - PostgreSQL Setup: '@github(dhis2/dhis2-docs, src/sysadmin/how-to/PostgreSQL-setup.md, new_install_docs)'
+  - DHIS2 High Availability: '@github(dhis2/dhis2-docs, src/sysadmin/how-to/tomcat-clustering.md, new_install_docs)'
+  - Installing Redis: '@github(dhis2/dhis2-docs, src/sysadmin/how-to/installing-redis.md, new_install_docs)'
+  # - Backup: '@github(dhis2/dhis2-docs, src/sysadmin/how-to/backup.md, new_install_docs)'
+  # - azure-sso: '@github(dhis2/dhis2-docs, src/sysadmin/how-to/azure-sso.md, new_install_docs)'
+  # - Encryption: '@github(dhis2/dhis2-docs, src/sysadmin/how-to/encryption.md, new_install_docs)'
+  # - Reverse Proxy: '@github(dhis2/dhis2-docs, src/sysadmin/how-to/reverse-proxy.md, new_install_docs)'
+  # - Securing DHIS2: '@github(dhis2/dhis2-docs, src/sysadmin/how-to/secure-dhis2.md, new_install_docs)'
+  # - Upgrade Major: '@github(dhis2/dhis2-docs, src/sysadmin/how-to/upgrade-major.md, new_install_docs)'
 Concepts:
   - Using Gateways for SMS reporting: '@github(dhis2/dhis2-docs, src/sysadmin/concepts/SMS-reporting.md, new_install_docs)'
+  - Debugging as another user: '@github(dhis2/dhis2-docs, src/sysadmin/concepts/user-impersonation.md, new_install_docs)'
   - Upgrading: '@github(dhis2/dhis2-docs, src/sysadmin/concepts/upgrading.md, new_install_docs)'
   - Audit: '@github(dhis2/dhis2-docs, src/sysadmin/concepts/audit.md, new_install_docs)'
-  - Architecture: '@github(dhis2/dhis2-docs, src/sysadmin/concepts/architecture.md, new_install_docs)'
-  - Dependencies: '@github(dhis2/dhis2-docs, src/sysadmin/concepts/dependencies.md, new_install_docs)'
+  - Deployment Architectures: '@github(dhis2/dhis2-docs, src/sysadmin/concepts/architecture.md, new_install_docs)'
   - Upgrade Guide: '@github(dhis2/dhis2-docs, src/sysadmin/concepts/Upgrade-Guide.md, new_install_docs)'
-  - Debugging as another user: '@github(dhis2/dhis2-docs, src/sysadmin/concepts/user-impersonation.md, new_install_docs)'
+  # - Dependencies: '@github(dhis2/dhis2-docs, src/sysadmin/concepts/dependencies.md, new_install_docs)'
 Reference:
-  - Authentication: '@github(dhis2/dhis2-docs, src/sysadmin/reference/authentication.md, new_install_docs)'
-  - Databases: '@github(dhis2/dhis2-docs, src/sysadmin/reference/database.md, new_install_docs)'
   - Monitoring: '@github(dhis2/dhis2-docs, src/sysadmin/reference/monitoring.md, new_install_docs)'
   - dhis.conf: '@github(dhis2/dhis2-docs, src/sysadmin/reference/dhis.conf.md, new_install_docs)'
-  - Experimental: '@github(dhis2/dhis2-docs, src/sysadmin/reference/experimental.md, new_install_docs)'
-  - File Storage: '@github(dhis2/dhis2-docs, src/sysadmin/reference/file-storage.md, new_install_docs)'
   - Oauth: '@github(dhis2/dhis2-docs, src/sysadmin/reference/oauth.md, new_install_docs)'
-  - Personal-Access-Tokens: '@github(dhis2/dhis2-docs, src/sysadmin/reference/personal-access-tokens.md, new_install_docs)'
   - Ldap: '@github(dhis2/dhis2-docs, src/sysadmin/reference/ldap.md, new_install_docs)'
   - Logging: '@github(dhis2/dhis2-docs, src/sysadmin/reference/logging.md, new_install_docs)'
   - PostgreSQL: '@github(dhis2/dhis2-docs, src/sysadmin/reference/postgresql.md, new_install_docs)'
   - Reverse Proxy: '@github(dhis2/dhis2-docs, src/sysadmin/reference/reverse_proxy_nginx.md, new_install_docs)'
+  # - Personal-Access-Tokens: '@github(dhis2/dhis2-docs, src/sysadmin/reference/personal-access-tokens.md, new_install_docs)'
+  # - Experimental: '@github(dhis2/dhis2-docs, src/sysadmin/reference/experimental.md, new_install_docs)'
+  # - File Storage: '@github(dhis2/dhis2-docs, src/sysadmin/reference/file-storage.md, new_install_docs)'
+  # - Authentication: '@github(dhis2/dhis2-docs, src/sysadmin/reference/authentication.md, new_install_docs)'
+  # - Databases: '@github(dhis2/dhis2-docs, src/sysadmin/reference/database.md, new_install_docs)'
